--- a/project.toml
+++ b/project.toml
@@ -8,7 +8,8 @@ classifiers = [
 ]
 requires-python = "==3.12.*"
 dependencies = [
-    "numpy~=1.21"
+    "numpy~=1.21",
+    "streamlit"
 ]
 dynamic = ["version"]
 
