--- a/project.toml
+++ b/project.toml
@@ -9,7 +9,8 @@ classifiers = [
 requires-python = "==3.12.*"
 dependencies = [
     "numpy~=1.21",
-    "streamlit"
+    "streamlit",
+    "uvicorn"
 ]
 dynamic = ["version"]
 
